# P5-hmi-ws

./: .gitignore  DEVELOPER_GUIDE.md  Dockerfile  README.md  Usefull_commands.md  docker-compose.yml  make_hmi_container.sh  setup_kivy_env.sh  start_hmi.sh  test_error_logging.py
admittance_parameters/: admittance_alice_test23_20251205_111919.json  admittance_alice_test56_20251205_111957.json  admittance_alice_test_20251205_111815.json  admittance_bob_hej_20251202_112310.json
config/: pre_config_poses.json
saved_configs/: .json  Test no 1.json  a.json  shit.json
src/p5_hmi/: CMakeLists.txt  hmi.py  hmi.py.orig  package.xml  setup.cfg  setup.py  test_snackbar.py  ur_robot.py
src/p5_hmi/kv/: admittance_control.kv  alice_configuration_setup.kv  alice_system_control.kv  base_system_control_page.kv  bob_configuration_setup.kv  bob_system_control.kv  dragon_drop.kv  error_msg_popup.kv  main.kv  mir_system_control.kv  settings.kv  start_page.kv  status_popup_dialog.kv  system_logging.kv
src/p5_hmi/pages/: OLD_base_system_control_page copy.py  __init__.py  settings.py  (+14 more)
src/p5_interfaces/: CMakeLists.txt  package.xml
src/p5_interfaces/msg/: CommandState.msg  Error.msg  Tagvector.msg
src/p5_interfaces/srv/: AdmittanceConfig.srv  AdmittanceSetStatus.srv  GetMissions.srv  LoadRawJSON.srv  MoveToPose.srv  MoveToPreDefPose.srv  PoseConfig.srv  PostMissions.srv  RobotConfigurations.srv  RunProgram.srv  SaveAdmittanceParam.srv  SaveProgram.srv  SetLinearMovement.srv  SetReferenceFrame.srv
src/resource/: hmi_interface
src/service_test/: package.xml  setup.cfg  setup.py
(+1 files in other folders)
