cmake_minimum_required(VERSION 3.8)
project(p5_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Error.msg"
  "msg/Tagvector.msg"
  "msg/CommandState.msg"
  "srv/MoveToPose.srv"
  "srv/SetLinearMovement.srv"
  "srv/SetReferenceFrame.srv"
  "srv/MoveToPreDefPose.srv"
  "srv/PoseConfig.srv"
  "srv/AdmittanceSetStatus.srv"
  "srv/AdmittanceConfig.srv"
  "srv/LoadRawJSON.srv"
  #"srv/SaveProgram.srv"

  DEPENDENCIES geometry_msgs
  DEPENDENCIES std_msgs
)

ament_export_dependencies(rosidl_default_runtime)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
